--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "libraries/cocos-headers"]
-	path = libraries/cocos-headers
-	url = git@github.com:RainixGD/cocos-headers-2.11.git
+    path = libraries/cocos-headers
+    url = https://github.com/RainixGD/cocos-headers-2.11.git
 [submodule "libraries/gd.h"]
-	path = libraries/gd.h
-	url = git@github.com:RainixGD/gd.h-2.11.git
+    path = libraries/gd.h
+    url = https://github.com/RainixGD/gd.h-2.11.git
 [submodule "libraries/minhook"]
-	path = libraries/minhook
-	url = git@github.com:RainixGD/minhook.git
+    path = libraries/minhook
+    url = https://github.com/RainixGD/minhook.git
